--- a/DataStructures/STLContainersComplexity/2.STLContainers-Priority Queue.md
+++ b/DataStructures/STLContainersComplexity/2.STLContainers-Priority Queue.md
@@ -8,7 +8,7 @@ Priority queue is used in many popular algorithms, it's the implementation of **
 or we can implemented **Min Heap** 
 `priority_queue<data_type,vector<data_type>,greater<data_type>> Nameofqueue`
 **Complexity**
-![[Pasted image 20240119194416.png]]
+![[complexityPriorityQueue.png]]
 
 
 
