--- a/DataStructures/2.STLContainersComplexity/1.1STLContainers-Priority Queue.md
+++ b/DataStructures/2.STLContainersComplexity/1.1STLContainers-Priority Queue.md
@@ -7,8 +7,9 @@ Priority queue is used in many popular algorithms, it's the implementation of **
 `priority_queue<data_type> NameOfQueue`
 or we can implemented **Min Heap** 
 `priority_queue<data_type,vector<data_type>,greater<data_type>> Nameofqueue`
+
 **Complexity**
-![[complexityPriorityQueue.png]]
+![Images](../images/complexityPriorityQueue.png)
 
 
 
