--- a/DataStructures/2.STLContainersComplexity/2.1Map.md
+++ b/DataStructures/2.STLContainersComplexity/2.1Map.md
@@ -18,3 +18,7 @@ Map is a class of STL that stores the values in the pattern of key-value pair
 ### unordered_multimap<int,int>UMM
 - It's allow have same keys with different values 
 - It's the implemented same as the unordered map is implemented which is the  [**Hash Table**](https://www.geeksforgeeks.org/hashing-data-structure/)
+
+
+## Complexity:
+![image](../images/mapComplexity.png)
