--- a/DataStructures/Info/2.STLContainersCommon/1.1Priority Queue.md
+++ b/DataStructures/Info/2.STLContainersCommon/1.1Priority Queue.md
@@ -9,7 +9,7 @@ or we can implemented **Min Heap**
 `priority_queue<data_type,vector<data_type>,greater<data_type>> Nameofqueue`
 
 **Complexity**
-![Images](../images/complexityPriorityQueue.png)
+![Images](../../../images/complexityPriorityQueue.png)
 
 
 
