--- a/DataStructures/Info/2.STLContainersCommon/4.1Stack.md
+++ b/DataStructures/Info/2.STLContainersCommon/4.1Stack.md
@@ -5,4 +5,4 @@ For e.g, many [recursive](https://www.geeksforgeeks.org/recursion/) solutions
 
 **Syntax:**
 `stack<data_type> STACK`
-![image](../images/stackComplexity.png)
+![image](../../../images/stackComplexity.png)
