--- a/DataStructures/Info/2.STLContainersCommon/5.1Queue.md
+++ b/DataStructures/Info/2.STLContainersCommon/5.1Queue.md
@@ -9,5 +9,5 @@ This is another Container Adapter that provides a FIFO (First In, First out)
 - `pop()` :removed from the front (dequeue)
 - `front()`: access the front element
 - `back()` :access the back element
-![image](../images/queueComplexity.png)
+![image](../../../images/queueComplexity.png)
 
