--- a/DataStructures/Info/2.STLContainersCommon/2.1Map.md
+++ b/DataStructures/Info/2.STLContainersCommon/2.1Map.md
@@ -21,4 +21,4 @@ Map is a class of STL that stores the values in the pattern of key-value pair
 
 
 ## Complexity:
-![image](../images/mapComplexity.png)
+![image](../../../images/mapComplexity.png)
