Update STLContainersTypes.md and 2.1Map.md

--- a/DataStructures/Info/1.STLContainersTypes.md
+++ b/DataStructures/Info/1.STLContainersTypes.md
@@ -18,7 +18,8 @@ Containers:
 		»forward_list
 		»list
 	**AssociativeContainers**
-	*Associative containers implements sorted data structures that can be quickly searched (log(n))*
+	*Associative containers implements sorted data structures that can be quickly searched (log(n))
+	using Self balancing BST  or [HasTable - LeetCode](https://leetcode.com/explore/learn/card/hash-table/)*
 		»Set
 		»Map
 		»Multiset
