Add examples of personalized priority_queue

--- a/DataStructures/Info/2.STLContainersCommon/1.1Priority Queue.md
+++ b/DataStructures/Info/2.STLContainersCommon/1.1Priority Queue.md
@@ -38,6 +38,32 @@ This operation helps to return the maximum element from Max Heap or the minimum 
 + Descending order Priority Queue
 	In Descending order the root node is the maximum element in a Max Heap, Example [4,6,8,9,10] So when we dequeue from this type of priority queue, 10 will remove from the queue and dequeue returns 10. because is the Highest number then is the higher priority
 
+you can personalize your `priority_queue` with structures like this  to push an element with an priority
+````cpp
+struct Element
+
+{
+    int value;
+    int priority;
+    Element(int val, int prio) : value(val), priority(prio) {}
+    bool operator<(const Element &otroElement) const
+    {
+        return priority < otroElement.priority;
+    }
+
+};
+
+priority_queue<Element> prioridad;
+````
+
+or you can use other forms like this one 
+````cpp
+ priority_queue<pair<int,int>, vector<pair<int,int>>, greater<pair<int,int>>> pq;
+````
+We use  pair to indicate the element we enqueue, and as a second argument a vector<pair<int, int>>  to indicate this container type used to store elements in the queue, Finally greater<pair<int, int>> to indicate that the element save in ascending Order (MinHeap)
+
+
+
 ### Complexity
 ![Images](../../../images/complexityPriorityQueue.png)
 
