--- a/DataStructures/2.STLContainersCommon/1.1Priority Queue.md
+++ b/DataStructures/2.STLContainersCommon/1.1Priority Queue.md
@@ -65,7 +65,7 @@ We use  pair to indicate the element we enqueue, and as a second argument a vect
 
 
 ### Complexity
-![Images](../../../images/complexityPriorityQueue.png)
+![Images](../../images/complexityPriorityQueue.png)
 
 
 
