--- a/DataStructures/2.STLContainersCommon/2.1Map.md
+++ b/DataStructures/2.STLContainersCommon/2.1Map.md
@@ -32,4 +32,4 @@ Map is a class of STL that stores the values in the pattern of key-value pair
 
 
 ## Complexity:
-![image](../../../images/mapComplexity.png)
+![image](../../images/mapComplexity.png)
