--- a/DataStructures/2.STLContainersCommon/6.1Vector.md
+++ b/DataStructures/2.STLContainersCommon/6.1Vector.md
@@ -5,4 +5,4 @@ Vector is the implementation of Dynamic Arrays
 `vector<vector<data_type>>V2D`
 
 #### Complexity 
-![images](../../../images/vectorComplexity.png)
+![images](../../images/vectorComplexity.png)
